--- a/public/assest/css/footer.css
+++ b/public/assest/css/footer.css
@@ -5,7 +5,7 @@
     background-color: white;
     height: 50px;
     width: 100%;
-    position: fixed;
+    position: absolute;
     bottom: 0px;
     left: 0px;
     border: 2px #E5E7EB solid;
