--- a/public/assest/css/layout.css
+++ b/public/assest/css/layout.css
@@ -15,6 +15,7 @@ body
 .app{
     overflow: scroll;
     max-height: calc(100vh - 100px);
+    width: 100vw;
 }
 .menubars{
     background: #fff;   
