--- a/public/assest/css/layout.css
+++ b/public/assest/css/layout.css
@@ -1,39 +1,34 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
-body
-{
-    background-color: #F6F8FB;
-    overflow: hidden;
+body {
+  background-color: #f6f8fb;
 }
-.main{
-    display: flex;
+.main {
+  display: flex;
 }
-.app{
-    overflow-x: scroll;
-    overflow-y: scroll;
-    height: calc(100vh - 100px);
-    width: 100vw;
-
+.app {
+  overflow-x: scroll;
+  overflow-y: scroll;
+  height: calc(100vh - 100px);
+  width: 100vw;
 }
-.menubars{
-    background: #fff;   
+.menubars {
+  background: #fff;
 }
-.warning-box
-{
-    background-color: wheat;
-    border: 1px solid #f0ad4e;
-    padding: 10px 15px;
-    margin: 10px 0px;
+.warning-box {
+  background-color: wheat;
+  border: 1px solid #f0ad4e;
+  padding: 10px 15px;
+  margin: 10px 0px;
 }
-.info-box
-{
-    background-color: rgb(206, 223, 243);
-    border: 1px solid #0077ff;
-    padding: 10px 15px;
-    margin: 10px 0px;
-    color: #004085;
+.info-box {
+  background-color: rgb(206, 223, 243);
+  border: 1px solid #0077ff;
+  padding: 10px 15px;
+  margin: 10px 0px;
+  color: #004085;
 }
